# pipico2w-adc-nanopb

./: .gitignore  CMakeLists.txt  README.md  instrument.proto  lwipopts.h  main.cpp  monitor.py  pico_sdk_import.cmake  plan.md
.github/workflows/: build.yml
